# worldfield

./: .gitignore  ARCHITECTURE.md  FINDINGS.md  README.md  WorldField_explained.md  pyproject.toml  requirements.txt  worldfield.cmd  worldfield_implementation_plan.md
apps/streamlit_demo/: .gitattributes  README.md  app.py  requirements.txt
day_eight/: experiment_graph_learning.py  experiment_pmi_learning.py  experiment_stability_audit.py
day_five/: coactivation.py  experiment.py  experiment_ambiguity.py  experiment_latent.py
day_four/: experiment.py  slot_memory.py  stress_geometry.py  stress_real.py
day_nine/: analyze_day9_failure.py  day9c_root_cause.py  day9d_causal_graph_recovery.py  day9e_scalability_study.py  day9f_scalable_learner.py  experiment_causal_structure.py
day_nine/reports/: DAY9_RESEARCH_REPORT.md
day_nine/reports/failure_traces/: double_confound_failed_runs.jsonl  triple_confound_failed_runs.jsonl
day_nine/reports/graph_recovery/: DAY9D_CAUSAL_GRAPH_REPORT.md  (+2 more)
day_one/: README.md  config.py  config_rich.py  data.py  model.py  requirements.txt  setup.sh  train.py  train_rich.py  viz.py
day_seven/: experiment_polysemy.py
day_six/: experiment.py  experiment_large.py  experiment_uncertainty.py
day_three/: experiment.py  world_state.py
day_two/: experiment.py  store.py
docs/: index.html
docs/planning/: 2025-06-25-architecture-data-flow.md  2025-06-25-nlp-language-roadmap.md
tests/: test_concept_attention.py  test_context_horizon.py  test_context_window.py  test_memory_retrieval.py  test_repo_health.py
worldfield/: __init__.py  __main__.py  config.py  device.py  devices.py  graphs.py  launcher.py  loaders.py  metrics.py  project.py
worldfield/benchmarks/: __init__.py
worldfield/cli/: __init__.py  app.py  chat.py  dashboard.py
worldfield/core/: __init__.py  activation.py  concept_attention.py  concepts.py  context.py  context_horizon.py  context_window.py  engine.py  fragments.py  goals.py  graph.py  memory_retrieval.py  slots.py  world_graph.py  world_state.py
worldfield/data/: sample.py
worldfield/db/: __init__.py  store.py
worldfield/encoders/: __init__.py  base.py  image.py  text.py  video.py
worldfield/learning/: __init__.py  engine.py
worldfield/nlg/: __init__.py  decoder.py  prompts.py  serializer.py
worldfield/nlp/: __init__.py  extractor.py  parser.py  resolver.py
worldfield/planning/: __init__.py  planner.py
worldfield/reasoning/: __init__.py  engine.py  formatter.py  graph_ops.py  inference.py  parser.py  summarizer.py
worldfield/simulation/: __init__.py  engine.py
worldfield/training/: __init__.py  align.py
(+11 files in other folders)
