[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "worldfield"
version = "0.1.0"
description = "A cognitive architecture on a single shared latent space"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["cognitive-architecture", "latent-space", "multimodal", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",
    "torch>=2.0",
    "sentence-transformers",
    "chromadb>=1.5",
    "rich",
    "pillow",
]

[project.optional-dependencies]
video = ["av"]
dev = ["pytest", "matplotlib", "faiss-cpu"]

[project.urls]
Homepage = "https://github.com/fireboltmagnum/worldfield"
Repository = "https://github.com/fireboltmagnum/worldfield"

[project.scripts]
worldfield = "worldfield.__main__:main"

[tool.setuptools.packages.find]
include = ["worldfield*"]

[tool.setuptools.package-data]
worldfield = ["py.typed"]
