[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "worldfield"
version = "0.1.0"
description = "A cognitive architecture on a single shared latent space"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["cognitive-architecture", "latent-space", "multimodal", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",
    "torch>=2.0",
    "sentence-transformers",
    "spacy>=3.0",
    "chromadb>=1.5",
    "rich>=13.0",
    "prompt_toolkit>=3.0",
    "pillow",
]

[project.optional-dependencies]
video = ["av"]
dev = ["pytest", "matplotlib", "faiss-cpu"]

[project.urls]
Homepage = "https://github.com/fireboltmagnum/worldfield"
Repository = "https://github.com/fireboltmagnum/worldfield"

[project.scripts]
worldfield = "worldfield.launcher:main"

[tool.setuptools.packages.find]
include = ["worldfield*"]

[tool.setuptools.package-data]
worldfield = ["py.typed"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
